# fastapi_llmops_demo

customer_support/: README.md  pyproject.toml
customer_support/src/customer_support/backend/: agents.py  api.py  constants.py
customer_support/src/customer_support/monitoring/: mlflow.db  monitoring.ipynb  prompts.ipynb
